Name:                rosy
Version:             0.1
Synopsis:            Painless bindings for the ROS robotics framework.
License:             BSD3
Cabal-version:       >=1.10
Author:              Hugo Pacheco
Maintainer:          Hugo Pacheco <hpacheco@di.uminho.pt>
Copyright:           (c) 2019 Hugo Pacheco
Category:            Robotics
Build-type:          Simple
Tested-with:         GHC >= 7.6
Description:         Simplified ROS bindings, powered by the roshask library.

Data-files: sounds/*.wav

Library
  Exposed-modules:     Rosy.Controller.Core
                       Rosy.Controller.Kobuki
                       Rosy.Robot.Kobuki
                       Rosy.Robot.State
                       Rosy.Viewer.Core
                       Rosy.Viewer.State
                       Rosy.Interface
                       Rosy
                       Paths_rosy

  Build-depends:       base >= 4.5 && < 6,
                       uuid, lens-family-th, lens-family-core, data-default-generics, stm, async, gloss, gloss-window, process,
                       roshask, ROS-nav-msgs, ROS-geometry-msgs, ROS-kobuki-msgs

  GHC-Options:         -Wall
  Hs-Source-Dirs:      src
  default-language: Haskell2010

