Name:                rosy
Version:             0.1
Synopsis:            Painless bindings for the ROS robotics framework.
License:             BSD3
Cabal-version:       >=1.10
Author:              Hugo Pacheco
Maintainer:          Hugo Pacheco <hpacheco@fc.up.pt>
Copyright:           (c) 2021 Hugo Pacheco
Category:            Robotics
Build-type:          Simple
Tested-with:         GHC >= 7.6
Description:         Simplified ROS bindings, powered by the roshask library.

Data-files: sounds/*.wav images/*.png

Library
  Exposed-modules:     Rosy.Controller.Core
                       Rosy.Controller.Kobuki
                       Rosy.Controller.Turtlesim
                       Rosy.Controller.Time
                       Rosy.Robot.Kobuki.Core
                       Rosy.Robot.Kobuki.State
                       Rosy.Viewer.Kobuki.Core
                       Rosy.Viewer.Kobuki.State
                       Rosy.Robot.Turtlesim.Core
                       Rosy.Robot.Turtlesim.State
                       Rosy.Viewer.Turtlesim.Core
                       Rosy.Viewer.Turtlesim.State
                       Rosy.Interface
                       Rosy.Interface.Task
                       Rosy.Interface.Task.Types
                       Rosy.Util
                       Rosy
                       Paths_rosy

  Build-depends:       base >= 4.5 && < 6,
                       uuid, random, lens-family-th, lens-family-core, mtl, transformers, containers, data-default-generics, time, stm, async, filepath, gloss-window, safe, dlist,
                       ROS-nav-msgs, ROS-geometry-msgs, ROS-kobuki-msgs, ROS-turtlesim-msgs, ROS-std-srvs-msgs, roshask, thread-hierarchy
  if impl(ghcjs)
    Build-depends:
                       codeworld-api-gloss
  else
    Build-depends:     gloss, gloss-juicy, process

  GHC-Options:         -Wall
  Hs-Source-Dirs:      src
  default-language: Haskell2010

